--- a/index.html
+++ b/index.html
@@ -7,19 +7,37 @@
 </head>
 <body>
 
+<h2>Update CSS variables with <span class="h1">JS</span></h2>
+
 <div class="controls">
     <label for="spacing">Spacing:</label>
-    <input id="spacing" type="range" min="10" max="200" value="10" data-sizing="px">
+    <input id="spacing" type="range" name="spacing" min="10" max="50" value="10" data-sizing="px">
 
     <label for="blur">Blur:</label>
-    <input id="blur" type="range" min="10" max="200" value="10" data-sizing="px">
+    <input id="blur" type="range" name="blur" min="0" max="20" value="2" data-sizing="px">
 
     <label for="base-color">Base color:</label>
-    <input id="base-color" type="color" name="base-color" value="#ffx600">
+    <input id="base-color" type="color" name="base-color" value="#ffc600">
     <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" alt="background-image">
 </div>
 
 <style>
+
+    :root{
+        --base-color: #ffc600;
+        --spacing: 10px;
+        --blur: 10px;
+    }
+
+    img{
+        padding: var(--spacing);
+        background: var(--base-color);
+        filter: blur(var(--blur));
+    }
+
+    .h1{
+        color: var(--base-color);
+    }
 
     body {
         text-align: center;
@@ -39,6 +57,19 @@
         width: 100px;
     }
 </style>
+
+<script>
+    const inputs = document.querySelectorAll('.controls input')
+
+    function handleUpdate() {
+        const suffix = this.dataset.sizing || '';
+        document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix)
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate))
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate))
+
+</script>
 
 </body>
 </html>
